--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
+    "shiki": "^0.14.4",
+    "styled-components": "^6.0.8",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
