--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.279.0",
     "next": "13.4.19",
     "next-contentlayer": "^0.3.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "next-compose-plugins": "^2.2.1",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4"
   }
